# Interactive_thin_shells_Bachelor_thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  easyFirstSetup.bat  less.exe.stackdump  vs_to_cmake_todo.md
Apps/: CMakeLists.txt  PDEsApp.cpp  PDEsApp.h  SimpleMOPTApp.cpp.not_include  SimpleMOPTApp.h.not_include
Apps/BenderApp/: BenderApp.cpp  BenderApp.h  BenderApp2D.cpp  BenderApp2D.h  BenderApp3D.cpp  BenderApp3D.h  BenderAppGlobals.h  BenderApp_lib.cpp  BenderApp_lib.h  BenderSimulationMesh.cpp  BenderSimulationMesh.h  BenderSimulationMesh2D.cpp  BenderSimulationMesh2D.h  CMakeLists.txt  IDCustomYuMiControlInterface.cpp  IDCustomYuMiControlInterface.h  InverseDeformationObjectiveFunction.cpp  InverseDeformationObjectiveFunction.h  InverseDeformationSolver.cpp  InverseDeformationSolver.h  LinePositionObjective.cpp  LinePositionObjective.h  MatchScaledTrajObjective.cpp  MatchScaledTrajObjective.h  MeshObjective.h  Mount.cpp  Mount.h  MountedPointSpring.cpp  MountedPointSpring.h  MountedPointSpring2D.cpp  MountedPointSpring2D.h  NodePositionObjective.cpp  NodePositionObjective.h  NodePositionObjectiveFunction.cpp  NodePositionObjectiveFunction.h  ParameterConstraintObjective.cpp  ParameterConstraintObjective.h  ParameterSet.cpp  ParameterSet.h  RBPointDistanceObjective.cpp  (+17 more)
Apps/CompliantRobotDesignApp/: CMakeLists.txt  CompliantRobotDesignApp.cpp  CompliantRobotDesignApp.h  DesignWindow.cpp  DesignWindow.h  SimulationWindow.cpp  SimulationWindow.h  main.cpp
Apps/FEMSim3DApp/: CMakeLists.txt  FEMSim3DApp.cpp  FEMSim3DApp.h  main.cpp
Apps/FEMSimApp/: CMakeLists.txt  FEMSimApp.cpp  FEMSimApp.h  main.cpp
Apps/FastRobotControlApp/: CMakeLists.txt  FastRobotControlApp.cpp  FastRobotControlApp.h  MOPTTrackingController.h  MotionPlanner.cpp  MotionPlanner.h  MotionPlannerWindow.cpp  MotionPlannerWindow.h  PlaybackController.cpp  PlaybackController.h  SimpleMOPTTrackingController.cpp  SimpleMOPTTrackingController.h  SimulationWindow.cpp  SimulationWindow.h  TrackingController.cpp  TrackingController.h  main.cpp
Apps/FireworksApp/: CMakeLists.txt  FireworksApp.cpp  FireworksApp.h  main.cpp
Apps/GLApplicationExampleApp/: CMakeLists.txt  GLApplicationExampleApp.cpp
Apps/IKApp/: CMakeLists.txt  IKApp.cpp  IKApp.h
Apps/KineSimApp/: CMakeLists.txt  KineSimApp.cpp  KineSimApp.h  main.cpp
Apps/NanoGUIExampleApp/: CMakeLists.txt  NanoGUIExampleApp.cpp
Apps/NanoGuiGL2App/: CMakeLists.txt  NanoGuiGL2App.cpp
Apps/NanoGuiTestApp/: CMakeLists.txt  nanogui_test_app.cpp
Apps/OptimizationDemoApp/: CMakeLists.txt  OptimizationDemoApp.cpp  OptimizationDemoApp.h  main.cpp
Apps/PDEsDemoApp/: CMakeLists.txt  PDEsDemoApp.cpp  PDEsDemoApp.h  main.cpp
Apps/Paper2DApp/: AngleSpring.cpp  AngleSpring.h  CMakeLists.txt  Paper2DApp.cpp  Paper2DApp.h  Paper2DMesh.cpp  Paper2DMesh.h  main.cpp
Apps/Paper3DApp/: BarycentricZeroLengthSpring.cpp  BarycentricZeroLengthSpring.h  BendingEdge.cpp  BendingEdge.h  CMakeLists.txt  HalfHingeTriangle.cpp  HalfHingeTriangle.h  Paper3DApp.cpp  Paper3DApp.h  Paper3DMesh.cpp  Paper3DMesh.h  Pin.cpp  Pin.h  PinHandle.h  ShapeWindow.cpp  ShapeWindow.h  SimulationWindow.cpp  SimulationWindow.h  ZeroLengthSpring3D.cpp  ZeroLengthSpring3D.h  main.cpp
Apps/PhysicalRobotControlApp/: CMakeLists.txt  PhysicalRobotControlApp.cpp  PhysicalRobotControlApp.h  PololuServoControlInterface.cpp  PololuServoControlInterface.h  RobotControlInterface.h  main.cpp
Apps/PlotExampleApp/: CMakeLists.txt  main.cpp
Apps/Plush/: AppArt.cpp  AppArt.h  AppBoa.cpp  AppBoa.h  AppBracelet.cpp  AppBracelet.h  AppEditor2D.cpp  AppEditor2D.h  AppEditor3D.cpp  AppEditor3D.h  AppPhilipp.cpp  AppPhilipp.h  AppSoftIK.cpp  AppSoftIK.h  AppSoftLoco.cpp  AppSoftLoco.h  AppXD.cpp  AppXD.h  CMakeLists.txt  CSTElement2D.cpp  CSTElement2D.h  CSTElement3D.cpp  CSTElement3D.h  CSTSimulationMesh2D.cpp  CSTSimulationMesh2D.h  CSTSimulationMesh3D.cpp  CSTSimulationMesh3D.h  Contact.cpp  Contact.h  CubicHermiteSpline.cpp  CubicHermiteSpline.h  CubicHermiteSpline_v2.cpp  CubicHermiteSpline_v2.h  FEMEnergyFunction.cpp  FEMEnergyFunction.h  FixedPointSpring2D.cpp  FixedPointSpring2D.h  FixedPointSpring3D.cpp  FixedPointSpring3D.h  Frame.cpp  (+66 more)
Apps/RBSimApp/: CMakeLists.txt  RBSimApp.cpp  RBSimApp.h  main.cpp
Apps/RobotDesignerApp/: CMakeLists.txt  RobotDesignerApp.cpp  RobotDesignerApp.h  main.cpp
Apps/ShaderTestApp/: CMakeLists.txt  ShaderTestApp.cpp  ShaderTestApp.h  main.cpp
Apps/TopOptApp/: CMakeLists.txt  TopOptApp.cpp  TopOptApp.h  TopOptConstraints.cpp  TopOptConstraints.h  TopOptEnergyFunction.cpp  TopOptEnergyFunction.h  main.cpp
Apps/WheeledRobotSimApp/: CMakeLists.txt  WheeledRobotSimApp.cpp  WheeledRobotSimApp.h  main.cpp
BulletCollision/BulletCollision/: CMakeLists.txt  btBulletCollisionCommon.h
ControlLib/: CMakeLists.txt
ControlLib/src/: BodyFrame.cpp  GeneralizedCoordinatesRobotRepresentation.cpp  GenericLimb.cpp  IK_EndEffectorsObjective.cpp  IK_EnergyFunction.cpp  IK_Optimizer.cpp  IK_Plan.cpp  IK_RobotStateRegularizer.cpp  IK_Solver.cpp  PololuServoControlInterface.cpp  QPControlConstraints.cpp  QPControlEnergyFunction.cpp  QPControlEngine.cpp  QPControlPlan.cpp  Robot.cpp  SimpleLimb.cpp  YuMiControlInterface.cpp
FEMSimLib/: CMakeLists.txt
FEMSimLib/src/: BarycentricZeroLengthSpring.cpp  BaseEnergyUnit.cpp  BendingEdge.cpp  BilateralSpring3D.cpp  CSTElement2D.cpp  CSTElement3D.cpp  CSTSimulationMesh2D.cpp  CSTSimulationMesh3D.cpp  CSTriangle3D.cpp  FEMEnergyFunction.cpp  FixedPointSpring2D.cpp  FixedPointSpring3D.cpp  MassSpringSimulationMesh3D.cpp  Node.cpp  Pin.cpp  SimMeshElement.cpp  SimulationMesh.cpp  ZeroLengthSpring3D.cpp
GUILib/: CMakeLists.txt
GUILib/src/: ColorMaps.cpp  CompositeWidget.cpp  FreeType.cpp  GLApplication.cpp  GLCamera.cpp  GLConsole.cpp  GLContentManager.cpp  (+23 more)
KineSimLib/: CMakeLists.txt
MathLib/: CMakeLists.txt  Line2d.cpp.old  Line2d.h.old
OptimizationLib/: CMakeLists.txt
PlushHelpers/: .CMakeLists.txt.un~  CMakeLists.txt
RobotDesignerLib/: CMakeLists.txt
Utils/: CMakeLists.txt
YuMiLib/: CMakeLists.txt
(+963 files in other folders)
